bonelli/bonelli.app.yml
apiVersion: v1
kind: Service
metadata:
  name: bonelli
spec:
  selector:
    app: bonelli
  ports:
    - name: bonelliport
      port: 4290
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonelli
  annotations:
    container.apparmor.security.beta.kubernetes.io/bonelli: runtime/default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bonelli
  template:
    metadata:
      labels:
        app: bonelli
    spec:
      containers:
        - name: bonelli
          image: ghcr.io/devcon4/bonelli:latest
          # securityContext:
          #   runAsNonRoot: true
          #   readOnlyRootFilesystem: true
          #   capabilities:
          #     add:
          #       - NET_BIND_SERVICE
          #     drop:
          #       - all
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "240m"
              memory: ".25Gi"
